--- a/detailProduct/detailProduct.html
+++ b/detailProduct/detailProduct.html
@@ -196,13 +196,7 @@
                 <div class="flex justify-start pt-4">
                   <h1 id="title" class="text-2xl font-normal sm:text-3xl"></h1>
                 </div>
-                <div class="flex justify-start">
-                  <h3
-                    class="text-xs font-bold text-orange-400 font-base md:text-base"
-                  >
-                    PIDI BAIQ - MIZAN PUBLISHING
-                  </h3>
-                </div>
+                <div id="author-publisher" class="flex justify-start"></div>
                 <div
                   class="flex flex-row items-center gap-3 section-bagikan pt-7"
                 >
